--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div id="addSection">
         <h2>Ajouter un nouvel article</h2>
         <input type="text" id="newItemName" placeholder="Nom de l'article">
-        <button onclick="window.addItem()">Ajouter</button>
-        <button onclick="window.resetInventory()">Réinitialiser l'inventaire</button>
+        <button onclick="addItem()">Ajouter</button>
+        <button onclick="resetInventory()">Réinitialiser l'inventaire</button>
     </div>
 
     <script type="module">
@@ -40,43 +40,38 @@
             measurementId: "G-19DVTE3W11"
         };
 
-        // Initialize Firebase and Firestore
+        // Initialisation Firebase et Firestore
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        // Fonction pour charger les articles enregistrés dans le Local Storage
+        // Fonction pour charger les articles enregistrés
         window.loadInventory = function() {
             const inventoryDiv = document.getElementById('inventory');
-            inventoryDiv.innerHTML = ''; // Vider la div pour recharger
+            inventoryDiv.innerHTML = '';
             const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-
             items.forEach(item => {
                 createItemElement(item.id, item.name, item.quantity);
             });
         };
 
-        // Fonction pour créer un élément d'article dans l'HTML
+        // Fonction pour créer un élément HTML pour chaque article
         window.createItemElement = function(id, name, quantity) {
             const inventoryDiv = document.getElementById('inventory');
-
             const itemDiv = document.createElement('div');
             itemDiv.className = 'item';
             itemDiv.id = id;
 
-            // Champ de modification de nom
             const nameInput = document.createElement('input');
             nameInput.type = 'text';
             nameInput.value = name;
             nameInput.onchange = () => updateName(id, nameInput.value);
             itemDiv.appendChild(nameInput);
 
-            // Boutons + et -
             const decrementButton = document.createElement('button');
             decrementButton.textContent = '-';
             decrementButton.onclick = () => decrement(id);
             itemDiv.appendChild(decrementButton);
 
-            // Champ de quantité modifiable
             const quantityInput = document.createElement('input');
             quantityInput.type = 'number';
             quantityInput.value = quantity;
@@ -90,7 +85,6 @@
             incrementButton.onclick = () => increment(id);
             itemDiv.appendChild(incrementButton);
 
-            // Bouton de suppression
             const removeButton = document.createElement('button');
             removeButton.textContent = 'Supprimer';
             removeButton.onclick = () => removeItem(id);
@@ -103,67 +97,35 @@
         window.addItem = async function() {
             const newItemName = document.getElementById('newItemName').value.trim();
             if (!newItemName) return;
+
             const newItem = {
                 id: `item${Date.now()}`,
                 name: newItemName,
                 quantity: 0
             };
 
-            // Ajouter à Firestore
-            await setDoc(doc(db, "inventoryItems", newItem.id), newItem);
-            createItemElement(newItem.id, newItem.name, newItem.quantity);
-            document.getElementById('newItemName').value = '';
-        };
-
-        // Fonction pour incrémenter la quantité
-        window.increment = function(id) {
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const item = items.find(item => item.id === id);
-            if (item) {
-                item.quantity += 1;
+            try {
+                await setDoc(doc(db, "inventoryItems", newItem.id), newItem);
+                const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
+                items.push(newItem);
                 localStorage.setItem('inventoryItems', JSON.stringify(items));
-                document.querySelector(`#${id} .quantity`).value = item.quantity;
+                createItemElement(newItem.id, newItem.name, newItem.quantity);
+                document.getElementById('newItemName').value = '';
+            } catch (error) {
+                console.error("Erreur lors de l'ajout : ", error);
             }
         };
 
-        // Fonction pour décrémenter la quantité
-        window.decrement = function(id) {
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const item = items.find(item => item.id === id);
-            if (item && item.quantity > 0) {
-                item.quantity -= 1;
-                localStorage.setItem('inventoryItems', JSON.stringify(items));
-                document.querySelector(`#${id} .quantity`).value = item.quantity;
-            }
-        };
-
-        // Fonction pour mettre à jour le nom de l'article
-        window.updateName = async function(id, newName) {
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const item = items.find(item => item.id === id);
-            if (item) {
-                item.name = newName;
-                localStorage.setItem('inventoryItems', JSON.stringify(items));
-
-                // Mettre à jour le nom dans Firestore
-                await updateDoc(doc(db, "inventoryItems", id), {
-                    name: newName
-                });
-            }
-        };
-
-        // Fonction pour mettre à jour la quantité directement dans le champ de saisie
-        window.updateQuantity = async function(id, newQuantity) {
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const item = items.find(item => item.id === id);
-            if (item && newQuantity >= 0) {
-                item.quantity = parseInt(newQuantity);
-                localStorage.setItem('inventoryItems', JSON.stringify(items));
-
-                // Mettre à jour la quantité dans Firestore
-                await updateDoc(doc(db, "inventoryItems", id), {
-                    quantity: item.quantity
-                });
+        // Fonction pour supprimer un article
+        window.removeItem = async function(id) {
+            try {
+                await deleteDoc(doc(db, "inventoryItems", id));
+                const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
+                const updatedItems = items.filter(item => item.id !== id);
+                localStorage.setItem('inventoryItems', JSON.stringify(updatedItems));
+                loadInventory();
+            } catch (error) {
+                console.error("Erreur lors de la suppression : ", error);
             }
         };
 
@@ -173,19 +135,7 @@
             loadInventory();
         };
 
-        // Fonction pour supprimer un article
-        window.removeItem = async function(id) {
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const updatedItems = items.filter(item => item.id !== id);
-            localStorage.setItem('inventoryItems', JSON.stringify(updatedItems));
-
-            // Supprimer de Firestore
-            await deleteDoc(doc(db, "inventoryItems", id));
-
-            loadInventory();
-        };
-
-        // Charger l'inventaire au démarrage après la définition de toutes les fonctions
+        // Charger l'inventaire au démarrage
         window.onload = window.loadInventory;
     </script>
 </body>
